--- a/task-4/package.json
+++ b/task-4/package.json
@@ -1,7 +1,15 @@
 {
   "private": true,
   "version": "0.0.0",
-  "dependencies": {},
-  "devDependencies": {},
-  "scripts": {}
+  "devDependencies": {
+    "@types/express": "^4.17.21",
+    "typescript": "^5.4.5"
+  },
+  "scripts": {
+    "build" : "tsc",
+    "dev" : "tsc --watch"
+  },
+  "dependencies": {
+    "express": "^4.19.2"
+  }
 }
