--- a/task-4/package.json
+++ b/task-4/package.json
@@ -3,11 +3,13 @@
   "version": "0.0.0",
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "nodemon": "^3.1.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   },
   "scripts": {
-    "build" : "tsc",
-    "dev" : "tsc --watch"
+    "build": "tsc",
+    "start": "nodemon"
   },
   "dependencies": {
     "express": "^4.19.2"
