--- a/task-4/package.json
+++ b/task-4/package.json
@@ -12,6 +12,7 @@
     "start": "nodemon"
   },
   "dependencies": {
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "uuid": "^9.0.1"
   }
 }
